1999-10-31  Akim Demaille  <akim@epita.fr>

	* Makefile.am (pkgdata_DATA, EXTRA_DIST): Removed acconfig.h.
	* testsuite/autoconf.s/defines.exp: Commented out, there is no
	longer an acconfig.h.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* autoconf.m4: Insert -*- Autoconf -*-.
	* acgeneral.m4: Likewise.
	* acspecific.m4: Likewise.
	* acoldnames.m4: Likewise.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Create AC_CONFIG_HEADERS which has the same interface as the other
	AC_CONFIG_*S.

	* acgeneral.m4 (AC_CONFIG_HEADERS): New macro, with the same
	interface as AC_CONFIG_LINKS and AC_CONFIG_FILES.
	(AC_LIST_HEADERS_COMMANDS): New growing string, initialize it.
	(AC_CONFIG_HEADER): Rename as...
	(AC_CONFIG_HEADERS): this, for consistency.
	(AC_CONFIG_HEADER): New macro, which calls AC_OUTPUT_HEADERS.
	(AC_OUTPUT_HEADERS): The square brackets for sed and grep were
	not properly quoted: use @BKL@ and @BKR@.
	(AC_OUTPUT_HEADERS): Run the AC_LIST_HEADERS_COMMANDS.

	* acgeneral.m4 (AC_OUTPUT): Once config.status created, before
	running it, trap to `exit 1' so that config.status is not removed
	if configure is interrupted when config.status is complete.

	* acgeneral.m4 (AC_OUTPUT_CONFIG_STATUS): When recognizing
	arguments, accept only foo, and no longer foo:foo.in etc.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formating changes.

1999-10-31  Akim Demaille  <akim@epita.fr>

	config.status: Speed up the creation of config headers (about four
	times faster on Linux).

	The previous scheme had three sed commands for each AC_DEFINE: one
	for #define templates, and two for #undef templates (with or
	without trailing spaces).  Divide this in three sed scripts
	instead: a one liner that removes the trailing spaces, one for
	#defines, and then the last for #undef.

	The real speed up comes from the fact that the #define script
	starts by checkin if the current input line has a #define, and if